--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -55,3 +55,21 @@ At an $\alpha$ of 4096 we can see that at the start, with $\ell=32$, the mean nu
 As $\ell$ increases, the mean number of honest shuffles necessary to make the shuffle secure becomes similar to the other $\alpha$ values.
 Another thing that differs between the experiments is that they all have sudden dip later on in the experiment.
 Here we can see a trend that the lower the~$\alpha$ is, the earlier the dip happens.
+
+\begin{figure*}[!htb]
+    \centering
+    \subfloat[\centering]{{\includegraphics[width=0.45\textwidth]{figures/results/violin-4096} }}%
+    \qquad
+    \subfloat[\centering]{{\includegraphics[width=0.45\textwidth]{figures/results/violin-5462} }}%
+    \subfloat[\centering]{{\includegraphics[width=0.45\textwidth]{figures/results/violin-8192} }}%
+    \caption{The results of the shuffle security experiment showing the spread of nessecary shuffle need for the shuffle to be secure}%
+    \label{fig:shufflesecurityviolin}%
+\end{figure*}
+
+The results in \autoref{fig:shufflesecurityviolin} show that for all three $\alpha$ values, the spread of the necessary honest shuffles tightens the larger the shuffle size $\ell$ gets.
+Like the results in \autoref{fig:shufflesecurity}, \autoref{fig:shufflesecurityviolin} also shows that the bigger a shuffle size $\ell$, the less honest shuffles on average are necessary to make the shuffle secure.
+
+It is worth noting that there is a spike in the distribution of the necessary honest shuffles at $\ell=32$ for $\alpha=4096$.
+This spike is not present for the other two $\alpha$ values, and is due to the probabilistic nature of the shuffling method.
+
+
