--- a/report/src/sections/07-discussion.tex
+++ b/report/src/sections/07-discussion.tex
@@ -1,4 +1,18 @@
 
 
 \section{Discussion}\label{sec:discussion}
-This is the discussion
+In this section we will discuss the results of the experiments in \autoref{sec:results} and how they relate to the CAAUrdleproofs protocol.
+We will also discuss some of the limitations of the CAAUrdleproofs protocol and how it compares to Curdleproofs.
+
+
+\subsection{CAAUrdleproofs vs Curdleproofs}\label{subsec:CAAUrdleproofs-vs-Curdleproofs}
+
+
+
+
+\subsection{Shuffle Security}\label{subsec:Discution-Shuffle-security}
+When looking at the results of the shuffle security experiment in \autoref{fig:shufflesecurity} and \autoref{fig:shufflesecurityviolin}, we can see that when taking into account the standard deviation, the shuffle will stil be secure with an~$\ell$ as low as 32 within the 8192 shuffles available.
+Even when taking into account the worst case scenario from our experiment, the shuffle will still be secure with an~$\ell$ as low as 40 within the 8192 shuffles available.
+
+We would however not recommend using an~$\ell$ lower than 80, as the standard deviation is still quite high at that point.
+
