--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -402,7 +402,7 @@ The dependence on the $\log$ stems from the number of recursive rounds that take
 In the proof of theorem 1, we show CAAUrdleproofs to be $O(\log n)$.
 This means that the size of CAAUrdleproofs must be $18+10 \lceil\log(\ell+4)\rceil\mathbb{G}$, $7\mathbb{F}$.
 
-CAAUrdleproofs therefore has the same proof size in Curdleproofs.
+CAAUrdleproofs therefore has the same proof size as Curdleproofs.
 
 The CAAUrdleproofs modification can still reduce the overall block size overhead, though.
 Using Whisk with CAAUurdleproofs has a block size of $17.04$ KB, when the shuffle size is 128\cite{Whisk2024}.
