Discussion & results shuffling

--- a/report/src/sections/07-discussion.tex
+++ b/report/src/sections/07-discussion.tex
@@ -14,5 +14,6 @@ We will also discuss some of the limitations of the CAAUrdleproofs protocol and 
 When looking at the results of the shuffle security experiment in \autoref{fig:shufflesecurity} and \autoref{fig:shufflesecurityviolin}, we can see that when taking into account the standard deviation, the shuffle will stil be secure with an~$\ell$ as low as 32 within the 8192 shuffles available.
 Even when taking into account the worst case scenario from our experiment, the shuffle will still be secure with an~$\ell$ as low as 40 within the 8192 shuffles available.
 
-We would however not recommend using an~$\ell$ lower than 80, as the standard deviation is still quite high at that point.
+We would however not recommend using an~$\ell$ lower than 80, as the worst case scenario uses a little under half the available shuffles, and you would only need one third to get within the standard deviation.
+This would stil lead to the size of the block overhead and the speed of the protocol being significantly reduced.
 
