--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -3,6 +3,7 @@
 
 \newacronym{aau}{AAU}{Aalborg University}
 \newacronym{zkp}{ZKP}{Zero-Knowledge Proof}
+\newacronym{zk}{ZK}{Zero-Knowledge}
 \newacronym{pos}{PoS}{Proof of Stake}
 \newacronym{pow}{PoW}{Proof of Work}
 \newacronym{zk-snark}{ZK-SNARK}{Zero-Knowledge Succinct Non-Interactive Argument of Knowledge}
