--- a/report/src/setup/preamble.tex
+++ b/report/src/setup/preamble.tex
@@ -17,6 +17,9 @@
 \usepackage{subfig}
 \usepackage{circuitikz}
 \usetikzlibrary{arrows.meta,arrows}
+\lstset{
+    commentstyle=\color{gray}
+}
 
 
 % Packages with options set
