--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -79,6 +79,6 @@ This spike is not present for the other two $\alpha$ values, and is due to the p
 Another thing that is notable is that in the setting of Ethereum, the maximum number of shuffles available is 8192.
 This means that in the cases where more than the 8192 shuffles were necessary to make the shuffle secure, the shuffle would not have been secure within the Ethereum setting.
 Therefore, it is also possible to see the experiment as running 1000 days worth of each shuffle size $\ell$ and then seeing how many of those days would have been secure.
-This means that the first size of $\ell$ that could have been secure for the entire durration of the experiment would be $\ell=42$ for $\alpha=8192$ and $\ell=40$ for $\alpha=5462$ and $\alpha=4096$.
+We found that the first size of $\ell$ that could have been secure for the entire duration of the experiment would be $\ell=42$ for $\alpha=8192$ and $\ell=40$ for $\alpha=5462$ and $\alpha=4096$.
 
 
