--- a/report/src/sections/07-discussion.tex
+++ b/report/src/sections/07-discussion.tex
@@ -5,7 +5,7 @@ In this section we will discuss the results of the experiments in \autoref{sec:r
 We will also discuss some of the limitations of the CAAUrdleproofs protocol and how it compares to Curdleproofs.
 
 
-\subsection{CAAUrdleproofs vs Curdleproofs}\label{subsec:CAAUrdleproofs-vs-Curdleproofs}
+\subsection{CAAUrdleproofs in comparison to Curdleproofs}\label{subsec:CAAUrdleproofs-vs-Curdleproofs}
 
 
 
