--- a/report/src/sections/07-discussion.tex
+++ b/report/src/sections/07-discussion.tex
@@ -15,7 +15,7 @@ When looking at the results of the shuffle security experiment in \autoref{fig:s
 Even when taking into account the worst case scenario from our experiment, the shuffle will still be secure with an~$\ell$ as low as 42 within the 8192 shuffles available.
 
 We would however not recommend using an~$\ell$ lower than 80, as the worst case scenario uses a little under half the available shuffles, and you would only need one third to get within the standard deviation.
-This would stil lead to the size of the block overhead and the speed of the protocol being significantly reduced.
+This would still lead to the size of the block overhead and the speed of the protocol being significantly reduced.
 
 
 
