--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -43,7 +43,7 @@ The results of the shuffle security experiment are shown in \autoref{fig:shuffle
 
 We can see that the bigger the shuffle size $\ell$ is, the less honest shuffles are necessary to make the shuffle secure.
 In Ethereum, each shuffling phase is limited to 8192 shuffles, meaning that the maximum number of honest shuffles that can be used is 8192.
-Therefore, the results of the experiment also find $T_H=T-\Beta$.
+Therefore, the results of the experiment also find $T_H=T-\beta$.
 This is how many of the $T$ shuffles, available during the shuffling phase, are needed to be honest, $T_H$, shuffles.
 The rest could then be the number of dishonest shuffles,~$\beta$.
 We also see that the bigger the shuffle size the narrower the standard deviation gets.
